chore(rt-23081): update from cms

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -56,7 +56,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="eng-sci-assoc" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This position will join the Texas Advanced Computing Center (TACC) as part of the Technical Infrastructure team. The position will provide technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
+					This position will join the Texas Advanced Computing Center (TACC) as part of the Technical Infrastructure team. The position will provide technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00021032" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -115,20 +115,6 @@
 					The Large Scale Systems group is seeking a candidate with advanced knowledge of storage hardware configuration, parallel filesystem design and operation, and Linux systems administration. Highly desire expertise in Linux-based clusters, high performance computing (HPC) software environments, high-speed interconnects such as InfiniBand, and parallel file systems such as Lustre or BeeGFS. A significant grasp of Linux/Unix shells and scripting languages will also be necessary to perform in this role.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00020368" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="software-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#software-developer" role="button">Software Developer</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="software-developer" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. This position will join TACC's Advanced Computing Interfaces (ACI) department as part of the Web and Mobile Applications (WMA) team as a software developer with an opportunity to demonstrate and expand both your technical and soft skills. Our team is brought together by a shared belief in using our software engineering skills to add value to the world. We are a passionate and diverse team of Software Engineers, DevOps, Project Managers, and Support staff brought together to embody the vision of creating software to change the world.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Software-Developer_R_00020298" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
