chore(rt-23097): new events

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -37,12 +37,32 @@
 </div>
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://cvent.utexas.edu/event/383706cb-95da-4694-9f11-881ec8cac169/summary" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/machine-learning-data-analysis.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://cvent.utexas.edu/event/383706cb-95da-4694-9f11-881ec8cac169/summary" target="_blank">Machine Learning Institute at TACC</a><br />
+			5-Day Series: October 3–7, 2022<br />
+			Austin, TX</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://sciencegateways.org/gateways2022" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/sgci.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
 			<a href="https://sciencegateways.org/gateways2022" target="_blank">Gateways 2022</a><br />
 			October 18–20, 2022<br />
 			San Diego, CA</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://cvent.utexas.edu/event/45f601b7-7e19-43d3-9d3c-5088c5d0d3e0/summary" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/tacc-containers-2022-01.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://cvent.utexas.edu/event/45f601b7-7e19-43d3-9d3c-5088c5d0d3e0/summary" target="_blank">Applied Parallel Programming Institute, Four-Session Series</a><br />
+			Four-Session Series: October 20 &amp; 27, November 3 &amp; 10, 2022<br />Thursdays 10:00 AM – 4:00 PM CST&nbsp; |&nbsp;
+			Austin, TX</p>
 	</div>
 </div>
 <div class="row">
