--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -11,8 +11,8 @@
 		<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/scientific-visualization" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/crt-scivis.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/scientific-visualization" target="_blank">Scientific Visualization (Virtual)</a><br />
-			August 31 – September 21, 2022</p>
+			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/scientific-visualization" target="_blank">Scientific Visualization (Virtual), Four-Session Series</a><br />
+			Four-Session Series: Aug. 31 | Sept. 7 | Sept. 14 | Sept. 21</p>
 	</div>
 </div>
 <div class="row">
@@ -61,7 +61,7 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://cvent.utexas.edu/event/45f601b7-7e19-43d3-9d3c-5088c5d0d3e0/summary" target="_blank">Applied Parallel Programming Institute, Four-Session Series</a><br />
-			Four-Session Series: October 20 &amp; 27, November 3 &amp; 10, 2022<br />Thursdays 10:00 AM – 4:00 PM CST&nbsp; |&nbsp;
+			Four-Session Series: October 20 &amp; 27 | November 3 &amp; 10<br />Thursdays 10:00 AM – 4:00 PM CST&nbsp; |&nbsp;
 			Austin, TX</p>
 	</div>
 </div>
