--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -51,6 +51,34 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
+				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III </a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Position will contribute to research, development, and support activities involving learning algorithms, systems, and architectures and the interfaces by which users can transparently harness these techniques and technologies.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00021398" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Position will contribute to research, development, and support activities involving learning algorithms, systems, and architectures and the interfaces by which users can transparently harness these techniques and technologies.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00021475" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
 				<a aria-controls="senior-devops-engineer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-devops-engineer" role="button">Senior DevOps Engineer</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-engineer" role="tabpanel">
@@ -59,20 +87,6 @@
 					As part of the Cloud and Interactive Computing group, this position will contribute to the design, implementation and operation of cloud infrastructure and DevOps supporting computational science endeavors. The successful candidate will lead multiple high-profile projects, from requirements gathering and design to production deployment and maintenance.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00020737" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="senior-systems-administrator" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-systems-administrator" role="button">Senior Systems Administrator</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-administrator" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					The Large Scale Systems group is seeking a candidate with advanced knowledge of storage hardware configuration, parallel filesystem design and operation, and Linux systems administration. Highly desire expertise in Linux-based clusters, high performance computing (HPC) software environments, high-speed interconnects such as InfiniBand, and parallel file systems such as Lustre or BeeGFS. A significant grasp of Linux/Unix shells and scripting languages will also be necessary to perform in this role.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00020368" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
