chore(rt-23378): add 2 jobs

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -51,7 +51,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III </a></h4>
+				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
 			<div class="panel-body">
@@ -62,6 +62,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -76,6 +77,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -87,6 +89,36 @@
 					As part of the Cloud and Interactive Computing group, this position will contribute to the design, implementation and operation of cloud infrastructure and DevOps supporting computational science endeavors. The successful candidate will lead multiple high-profile projects, from requirements gathering and design to production deployment and maintenance.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00020737" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="hpc-user-support-res-eng-assoc-iv" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#hpc-user-support-res-eng-assoc-iv" role="button">HPC User Support Research Engineering/Scientist Associate IV</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-res-eng-assoc-iv" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					The Research Engineering&#x2F;Scientist Associate IV will join the High Performance Computing (HPC) area to work on building a benchmarking infrastructure and maintain an archive of application performance.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-IV_R_00022698" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="comp-sci-pro-dev-coord" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#comp-sci-pro-dev-coord" role="button">Computer Science Professional Development Coordinator</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="comp-sci-pro-dev-coord" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Position will coordinate outreach activities and projects including communication with trainers and participants, registration, event organization, managing processes to increase efficiency.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Computer-Science-Professional-Development-Coordinator_R_00022711" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
