chore: update epic weteach from cms

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs.html
@@ -122,47 +122,47 @@ Style guide: components.weteachcs.card
     margin-top: 0.5em;
 }</style>
 <section class="weteachcs-content">
-    <div class="weteachcs-card weteachcs-card--highlight">
-        <div class="row">
-            <!--<div class="row" style="background-color: #f1f1f1; margin: 0px 0px 20px 0px; padding:20px;">-->
-            <div class="col-sm-3  weteachcs-card__figure">
-                <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/wtcs-Lightbulb-5color.png/" /></div>
-            <p class="col-sm-9  weteachcs-card__content">
-                WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin's Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_CS collective impact network which serves hundreds of districts, schools, and educators in Texas and across the nation. WeTeach_CS is dedicated to broadening participation in computing for every student regardless of race, gender, income, or location and leverages the TACC's internationally recognized computing expertise to guide strategic improvement in computing education at a state and national level.</p>
-        </div>
-    </div>
-    <div class="row  weteachcs-card">
-        <figure class="col-sm-5  weteachcs-card__figure">
-            <div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/183874056"></iframe></div>
-        </figure>
-        <div class="col-sm-7  weteachcs-card__content">
-            <h3>
-                Goals and Outcomes</h3>
-            <p>
-                WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>.</p>
-            <p>
-                <em><a href="/web/website/weteachcs/goals-and-outcomes">Learn more<span class="sr-only"> about WeTeach_CS goals and outcomes</span></a></em></p>
-        </div>
-    </div>
-    <div class="row  weteachcs-card">
-        <figure class="col-sm-5  weteachcs-card__figure">
-            <div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/254041542"></iframe></div>
-        </figure>
-        <div class="col-sm-7  weteachcs-card__content">
-            <h3>
-                Certification and Professional Development</h3>
-            <p>
-                Our certification and professional development programs are helping to increase the number of CS teachers in Texas while improving the quality of CS classroom instruction.</p>
-            <p>
-                <em><a href="/web/website/weteachcs/certification">Learn more<span class="sr-only"> about WeTeach_CS certification and professional development</span></a></em></p>
-        </div>
-    </div>
-    <h3>
-        Contact</h3>
-    <style id="o-gallery-styles" type="text/css">
-    /*
+	<div class="weteachcs-card weteachcs-card--highlight">
+		<div class="row">
+			<!--<div class="row" style="background-color: #f1f1f1; margin: 0px 0px 20px 0px; padding:20px;">-->
+			<div class="col-sm-3  weteachcs-card__figure">
+				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/wtcs-Lightbulb-5color.png/" /></div>
+			<p class="col-sm-9  weteachcs-card__content">
+				WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin's Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_CS collective impact network which serves hundreds of districts, schools, and educators in Texas and across the nation. WeTeach_CS is dedicated to broadening participation in computing for every student regardless of race, gender, income, or location and leverages the TACC's internationally recognized computing expertise to guide strategic improvement in computing education at a state and national level.</p>
+		</div>
+	</div>
+	<div class="row  weteachcs-card">
+		<figure class="col-sm-5  weteachcs-card__figure">
+			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+				<iframe allowfullscreen="" class="embed-responsive-item" src="https://player.vimeo.com/video/183874056"></iframe></div>
+		</figure>
+		<div class="col-sm-7  weteachcs-card__content">
+			<h3>
+				Goals and Outcomes</h3>
+			<p>
+				WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>.</p>
+			<p>
+				<em><a href="/web/website/weteachcs/goals-and-outcomes">Learn more<span class="sr-only"> about WeTeach_CS goals and outcomes</span></a></em></p>
+		</div>
+	</div>
+	<div class="row  weteachcs-card">
+		<figure class="col-sm-5  weteachcs-card__figure">
+			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+				<iframe allowfullscreen="" class="embed-responsive-item" src="https://player.vimeo.com/video/254041542"></iframe></div>
+		</figure>
+		<div class="col-sm-7  weteachcs-card__content">
+			<h3>
+				Certification and Professional Development</h3>
+			<p>
+				Our certification and professional development programs are helping to increase the number of CS teachers in Texas while improving the quality of CS classroom instruction.</p>
+			<p>
+				<em><a href="/web/website/weteachcs/certification">Learn more<span class="sr-only"> about WeTeach_CS certification and professional development</span></a></em></p>
+		</div>
+	</div>
+	<h3>
+		Contact</h3>
+	<style id="o-gallery-styles" type="text/css">
+/*
     Gallery (Object)
 
     A gallery of apps to launch, images to view, etc.
@@ -200,12 +200,9 @@ Style guide: components.weteachcs.card
     /* On wide viewport, more columns */
     @media only screen and (min-width: 768px) {
         .o-gallery--shrink-wrap { grid-template-columns: repeat(3, minmax(var(--item-min-width), 1fr)); }
-    }</style>
-    <div class="o-gallery o-gallery--shrink-wrap" style="--min-item-width: 225px">
-        <figure class="weteachcs-card weteachcs-card--highlight">
-            <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/amy-carrell.jpg/">
-            <figcaption class="weteachcs-card__content">
-                <a href="/about/directory/amy-carrell">Amy Carrell</a> serves as Director of Outreach for EPIC and can assist you with questions about WeTeach_CS professional development services.</figcaption>
-        </figure>
-    </div>
+    }	</style>
+	<div class="o-gallery o-gallery--shrink-wrap" style="--min-item-width: 225px">
+		<figure class="weteachcs-card weteachcs-card--highlight">
+			<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/amy-carrell.jpg/" /> <figcaption class="weteachcs-card__content"> <a href="/about/directory/amy-carrell">Amy Carrell</a> serves as Director of Outreach for EPIC and can assist you with questions about WeTeach_CS professional development services.</figcaption></figure>
+	</div>
 </section>
