chore: update staff dir from cms

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -3,7 +3,7 @@
 	Full Time Staff</h3>
 <center>
 	<p style="clear: both; font-size: 15px;">
-		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; Q&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; <a href="/web/website/about/directory/#V" style="text-decoration: none; font-size: 15px;">V</a>&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; X&nbsp; Y&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
+		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; Q&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; V&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; X&nbsp; Y&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
 </center>
 <p>
 	&nbsp;</p>
@@ -34,14 +34,6 @@
 				<a href="mailto:gda@tacc.utexas.edu">gda@tacc.utexas.edu</a></td>
 			<td>
 				<a name="A"></a> Scalable Visualization</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/nashid-afreen">Afreen, Nashid</a></td>
-			<td>
-				<a href="mailto:nafreen@tacc.utexas.edu">nafreen@tacc.utexas.edu</a></td>
-			<td>
-				User Services</td>
 		</tr>
 		<tr>
 			<td>
@@ -205,14 +197,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/alyssa-cantu">Cantu, Alyssa</a></td>
-			<td>
-				<a href="mailto:acantu@tacc.utexas.edu">acantu@tacc.utexas.edu</a></td>
-			<td>
-				Life Sciences Computing</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/james-carson">Carson, James</a></td>
 			<td>
 				<a href="mailto:jcarson@tacc.utexas.edu">jcarson@tacc.utexas.edu</a></td>
@@ -253,11 +237,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/joon-yee-chuah">Chuah, Joon-Yee</a></td>
+				<a href="/web/website/about/directory/hanning-chen">Chen, Hanning</a></td>
 			<td>
-				<a href="mailto:jchuah@tacc.utexas.edu">jchuah@tacc.utexas.edu</a></td>
+				<a href="mailto:hchen@tacc.utexas.edu">hchen@tacc.utexas.edu</a></td>
 			<td>
-				Web &amp; Mobile Applications</td>
+				HPC Performance &amp; Architectures</td>
 		</tr>
 		<tr>
 			<td>
@@ -373,11 +357,27 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/maria-esteva" t3url="241">Esteva, Maria</a></td>
+				<a href="/web/website/about/directory/kimberly-eldredge">Eldredge, Kimberly</a></td>
+			<td>
+				<a href="mailto:keldredge@tacc.utexas.edu">keldredge@tacc.utexas.edu</a></td>
+			<td>
+				Center Operations &amp; Administration</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/maria-esteva">Esteva, Maria</a></td>
 			<td>
 				<a href="mailto:maria@tacc.utexas.edu">maria@tacc.utexas.edu</a></td>
 			<td>
 				Data Management &amp; Collections</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/nicole-evans">Evans, Nicole</a></td>
+			<td>
+				<a href="mailto:nevans@tacc.utexas.edu">nevans@tacc.utexas.edu</a></td>
+			<td>
+				Center Operations &amp; Administration</td>
 		</tr>
 		<tr>
 			<td>
@@ -901,6 +901,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/sasmita-mohapatra">Mohapatra, Sasmita</a></td>
+			<td>
+				<a href="mailto:smohapatra@tacc.utexas.edu">smohapatra@tacc.utexas.edu</a></td>
+			<td>
+				HPC Frontline Group</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/david-montoya">Montoya, David</a></td>
 			<td>
 				<a href="mailto:dmontoya@tacc.utexas.edu">dmontoya@tacc.utexas.edu</a></td>
@@ -978,14 +986,6 @@
 				<a href="mailto:spierce@tacc.utexas.edu">spierce@tacc.utexas.edu</a></td>
 			<td>
 				Data Management &amp; Collections</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/jordyn-pike">Pike, Jordyn</a></td>
-			<td>
-				<a href="mailto:jordyn.pike@austin.utexas.edu">jordyn.pike@austin.utexas.edu</a></td>
-			<td>
-				Health Analytics</td>
 		</tr>
 		<tr>
 			<td>
@@ -1173,14 +1173,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/jawon-song">Song, Jawon</a></td>
-			<td>
-				<a href="mailto:jawon@tacc.utexas.edu">jawon@tacc.utexas.edu</a></td>
-			<td>
-				Life Sciences Computing</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/dan-stanzione">Stanzione, Dan</a></td>
 			<td>
 				<a href="mailto:dan@tacc.utexas.edu">dan@tacc.utexas.edu</a></td>
@@ -1269,14 +1261,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/joseph-vantassel">Vantassel, Joseph</a></td>
-			<td>
-				<a href="mailto:jvantassel@tacc.utexas.edu">jvantassel@tacc.utexas.edu</a></td>
-			<td>
-				<a name="V"></a> HPC Applications</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/ian-wang">Wang, Ian</a></td>
 			<td>
 				<a href="mailto:iwang@tacc.utexas.edu">iwang@tacc.utexas.edu</a></td>
@@ -1304,6 +1288,14 @@
 				<a href="/web/website/about/directory/garland-whiteside" t3url="294">Whiteside, Garland</a></td>
 			<td>
 				<a href="mailto:garland@tacc.utexas.edu">garland@tacc.utexas.edu</a></td>
+			<td>
+				Networking, Security &amp; Operations</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/luke-willis">Willis, Luke</a></td>
+			<td>
+				<a href="mailto:dwillis@tacc.utexas.edu">dwillis@tacc.utexas.edu</a></td>
 			<td>
 				Networking, Security &amp; Operations</td>
 		</tr>
@@ -1346,6 +1338,14 @@
 				<a href="mailto:zzhang@tacc.utexas.edu">zzhang@tacc.utexas.edu</a></td>
 			<td>
 				Data Management &amp; Collections</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/felix-zuo">Zuo, Felix</a></td>
+			<td>
+				<a href="mailto:fzuo@tacc.utexas.edu">fzuo@tacc.utexas.edu</a></td>
+			<td>
+				Life Sciences Computing</td>
 		</tr>
 	</tbody>
 </table>
