fix(rt-*): jennifer schopf typos

--- a/web-content/root/about/directory--lead-team.html
+++ b/web-content/root/about/directory--lead-team.html
@@ -113,11 +113,11 @@
 			Director of Visualization</p>
 	</div>
 	<div class="col-md-2 col-xs-4">
-		<a href="/web/website/about/directory/jennifer-schopf"><img alt="Jennifer Schopf" class="lt-img" src="/documents/1084364/1085297/jennifer-schopf.png" style="border:0; margin-bottom:2px;" /></a>
+		<a href="/web/website/about/directory/jennifer-schopf"><img alt="Jennifer Schopf" class="lt-img" src="/documents/1084364/1085297/jennifer-schopf.jpg" style="border:0; margin-bottom:2px;" /></a>
 		<h6 class="bottomless">
 			<a href="/web/website/about/directory/jennifer-schopf">Jennifer Schopf</a></h6>
 		<p class="topless">
-			Director of Visualization</p>
+			Director of Networking Partnerships</p>
 	</div>
 	<!--<div class="col-md-2 col-xs-4">
 		<a href="/web/website/about/directory/matthew-vaughn"><img alt="Matthew Vaughn" class="lt-img" src="/documents/1084364/1085297/matt-vaughn.jpg/3f4e0a48-b9a4-4939-9e0f-0291c261f82f?t=1412803466000" style="border:0; margin-bottom:2px;" /></a>
