fix(rt-*): new staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -301,6 +301,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/john-desantis">DeSantis, John</a></td>
+			<td>
+				<a href="mailto:desantis@tacc.utexas.edu">desantis@tacc.utexas.edu</a></td>
+			<td>
+				Large Scale Systems</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/charlie-dey">Dey, Charlie</a></td>
 			<td>
 				<a href="mailto:charlie@tacc.utexas.edu">charlie@tacc.utexas.edu</a></td>
@@ -741,6 +749,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/shayan-khan">Khan, Shayan</a></td>
+			<td>
+				<a href="mailto:skhan@tacc.utexas.edu">skhan@tacc.utexas.edu</a></td>
+			<td>
+				Web &amp; Mobile Applications</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/tabish-khan">Khan, Tabish</a></td>
 			<td>
 				<a href="mailto:tkhan@tacc.utexas.edu">tkhan@tacc.utexas.edu</a></td>
@@ -757,7 +773,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/lars-koesterke" t3url="257">Koesterke, Lars </a></td>
+				<a href="/web/website/about/directory/lars-koesterke" t3url="257">Koesterke, Lars</a></td>
 			<td>
 				<a href="mailto:lars@tacc.utexas.edu">lars@tacc.utexas.edu</a></td>
 			<td>
@@ -765,11 +781,19 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/judy-lau">Lau, Judy</a></td>
+			<td>
+				<a href="mailto:jlau@tacc.utexas.edu">jlau@tacc.utexas.edu</a></td>
+			<td>
+				<a name="L"></a> Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/sergio-leal">Leal, Sergio</a></td>
 			<td>
 				<a href="mailto:sleal@tacc.utexas.edu">sleal@tacc.utexas.edu</a></td>
 			<td>
-				<a name="L"></a> Networking, Security &amp; Operations</td>
+				Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
@@ -794,6 +818,14 @@
 				<a href="mailto:jli@tacc.utexas.edu">jli@tacc.utexas.edu</a></td>
 			<td>
 				HPC Software Tools</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/sikan-li">Li, Sikan</a></td>
+			<td>
+				<a href="mailto:sli@tacc.utexas.edu">sli@tacc.utexas.edu</a></td>
+			<td>
+				Scalable Computational Intelligence (SCI)</td>
 		</tr>
 		<tr>
 			<td>
@@ -925,11 +957,19 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/jung-who-nam">Nam, Jung Who</a></td>
+			<td>
+				<a href="mailto:jnam@tacc.utexas.edu">jnam@tacc.utexas.edu</a></td>
+			<td>
+				<a name="N"></a> Scientific Visualization</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/paul-navratil">Navratil, Paul</a></td>
 			<td>
 				<a href="mailto:pnav@tacc.utexas.edu">pnav@tacc.utexas.edu</a></td>
 			<td>
-				<a name="N"></a> Scalable Visualization Technologies</td>
+				Scalable Visualization Technologies</td>
 		</tr>
 		<tr>
 			<td>
