--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
@@ -65,7 +65,8 @@
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			--><!-- CLOSED: Simple -->
 			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p></div>
+				Check back in January 2023 for future opportunities.</p>
+		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -122,8 +123,8 @@
 					</ul>-->
 					<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&amp;filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
-					<p><small>
-						Code of Conduct (sent in mail),<br />
+					<p>
+						<small>Code of Conduct (sent in mail),<br />
 						Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
