fix(rt-23674): fix judy lau e-mail

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -783,7 +783,7 @@
 			<td>
 				<a href="/web/website/about/directory/judy-lau">Lau, Judy</a></td>
 			<td>
-				<a href="mailto:jlau@tacc.utexas.edu">jlau@tacc.utexas.edu</a></td>
+				<a href="mailto:judy@tacc.utexas.edu">judy@tacc.utexas.edu</a></td>
 			<td>
 				<a name="L"></a> Expanding Pathways in Computing (EPIC)</td>
 		</tr>
