fix(rt-23577): save some alumni-archived-… html

--- a/web-content/root/education/undergrads-grads/reu/alumni-archived-projects--link-list.html
+++ b/web-content/root/education/undergrads-grads/reu/alumni-archived-projects--link-list.html
@@ -1,10 +1,16 @@
+<h4>
+	Cohorts from Previous Years</h4>
 <ul>
 	<li>
-		<a href="https://www.tacc.utexas.edu/reu/alumni/2019">REU Almuni 2019</a></li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2021">REU Almuni 2021</a></li>
 	<li>
-		<a href="https://www.tacc.utexas.edu/reu/alumni/2016">REU Almuni 2016</a></li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2020">REU Almuni 2020</a></li>
+<li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2019">REU Almuni 2019</a></li>
 	<li>
-		<a href="https://www.tacc.utexas.edu/reu/alumni/2015">REU Almuni 2015</a></li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2016">REU Almuni 2016</a></li>
 	<li>
-		<a href="https://www.tacc.utexas.edu/reu/alumni/2014">REU Almuni 2014</a></li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2015">REU Almuni 2015</a></li>
+	<li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2014">REU Almuni 2014</a></li>
 </ul>
